// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> layout it renders Button on touch devices 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  />
</button>
`;

exports[`<Button /> layout it renders children 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  >
    <div
      className="mfui-beta-button__content content-class"
    >
      <span
        className="mfui-beta-button__text"
      >
        button
      </span>
    </div>
  </div>
</a>
`;

exports[`<Button /> layout renders Button with default props 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  />
</button>
`;

exports[`<Button /> layout renders Button with props 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render full width button 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_full-width mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag a with disabled state 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_disabled mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  disabled={false}
  href="test"
  onClick={[Function]}
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag button with disabled state 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_disabled mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  />
</button>
`;

exports[`<Button /> layout should render tag with target _self and without rel attribute 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  disabled={false}
  href="test"
  onClick={[Function]}
  target="_self"
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag without target and with rel attribute 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  disabled={false}
  href="test"
  onClick={[Function]}
  rel="nofollow"
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render tag without target, href and rel attribute 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  />
</button>
`;

exports[`<Button /> layout should render with arrow 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  >
    <div
      className="mfui-beta-button__content"
    >
      <span
        className="mfui-beta-button__text"
      >
        arrow
      </span>
      <test-file-stub
        className="mfui-beta-button__icon-arrow"
      />
    </div>
  </div>
</button>
`;

exports[`<Button /> layout should render with different height for resolutions 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_size-wide_large mfui-beta-button_size-desktop_medium mfui-beta-button_size-tablet_medium mfui-beta-button_size-mobile_small mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  />
</a>
`;

exports[`<Button /> layout should render with left icon 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  >
    <div
      className="mfui-beta-button__content"
    >
      <div
        className="mfui-beta-button__icon"
      >
        <test-file-stub />
      </div>
      <span
        className="mfui-beta-button__text"
      >
        left icon
      </span>
    </div>
  </div>
</button>
`;

exports[`<Button /> snapshots with loader it renders loader with white color and medium size on all resolutions 1`] = `
<a
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_purple mfui-beta-button_size-all_large mfui-beta-button_loading mfui-beta-button_no-touch class root-class"
  data-test="test"
  disabled={false}
  href="any"
  onClick={[Function]}
  rel="noreferrer noopener"
  target="_blank"
>
  <div
    className="mfui-beta-button__inner"
  >
    <Preloader
      color="white"
      sizeAll="medium"
    />
  </div>
</a>
`;

exports[`<Button /> snapshots with loader should render loader with black color 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_outline mfui-beta-button_theme_black mfui-beta-button_size-all_medium mfui-beta-button_loading mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  >
    <Preloader
      color="black"
      sizeAll="medium"
    />
  </div>
</button>
`;

exports[`<Button /> snapshots with loader should render loader with default color 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_outline mfui-beta-button_theme_purple mfui-beta-button_size-all_medium mfui-beta-button_loading mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  >
    <Preloader
      color="default"
      sizeAll="medium"
    />
  </div>
</button>
`;

exports[`<Button /> snapshots with loader should render loader with small size on mobile resolution and medium size on the rest 1`] = `
<button
  className="mfui-beta-button mfui-beta-button_type_primary mfui-beta-button_theme_green mfui-beta-button_size-all_medium mfui-beta-button_size-wide_large mfui-beta-button_size-desktop_large mfui-beta-button_size-tablet_medium mfui-beta-button_size-mobile_small mfui-beta-button_loading mfui-beta-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-beta-button__inner"
  >
    <Preloader
      color="white"
      sizeAll="medium"
      sizeDesktop="medium"
      sizeMobile="small"
      sizeTablet="medium"
      sizeWide="medium"
    />
  </div>
</button>
`;
